--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "my-profile3.png"
   name             : "Kazuki Yamauchi"
   pronouns         : # example: "she/her"  
-  bio              : "Master student at UTokyo"
+  bio              : "Ph.D. student at UTokyo"
   location         : "Tokyo, Japan"
   employer         : 
   uri              : 
